--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@builder.io/dev-tools": "^1.0.19",
     "@builder.io/react": "^4.0.1",
     "@builder.io/sdk": "^2.2.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.1"
   }
 }
