--- a/.prettierrc
+++ b/.prettierrc
@@ -2,10 +2,10 @@
   "arrowParens": "always",
   "bracketSameLine": false,
   "bracketSpacing": true,
-  "semi": false,
+  "semi": true,
   "experimentalTernaries": false,
-  "singleQuote": true,
-  "jsxSingleQuote": true,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
   "quoteProps": "as-needed",
   "trailingComma": "all",
   "singleAttributePerLine": false,
@@ -13,10 +13,9 @@
   "vueIndentScriptAndStyle": false,
   "proseWrap": "preserve",
   "insertPragma": false,
-  "printWidth": 100,
   "requirePragma": false,
   "tabWidth": 2,
   "useTabs": false,
-  "embeddedLanguageFormatting": "auto"
+  "embeddedLanguageFormatting": "auto",
+  "printWidth": 200
 }
-
