--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "huntress-poc",
-  "version": "0.1.0",
+  "name": "vue-app",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@builder.io/dev-tools": "^1.0.19",
-    "@builder.io/react": "^4.0.1",
-    "@builder.io/sdk": "^2.2.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^3.1.3",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "@builder.io/dev-tools": "^1.1.6",
+    "@builder.io/react": "^5.0.2",
+    "@builder.io/sdk": "^3.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.12",
+    "vite": "^5.4.1"
   }
 }
